# acme-engine

./: .gitignore  Dockerfile  README.md  acme-engine.code-workspace  env.manifest  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md  python-src.instructions.md  tests.instructions.md
.github/workflows/: container.yml  copilot-setup-steps.yml  docs.yml  test.yml
docs/: mkdocs.yml
docs/docs/: install.md
docs/docs/developer/: api-reference.md  architecture.md  contributing.md
docs/docs/user/: cheat-sheet.md  features.md  getting-started.md  install.md  release-notes.md  user-guides.md
example/: flow.py
src/acme_engine/: __init__.py  _main.py
src/acme_engine/cfn/: README.md  ecs_cluster.py  ecs_cluster.yaml
src/acme_engine/cfn/task/: README.md  task_definition.py  task_definition.yaml
src/acme_engine/runtime/: __init__.py  run_flow.py
src/acme_engine/sdk/: README.md  example_usage.py  flow_deployer.py
src/acme_engine/stepfn/: README.md  compile.py  deploy.py
tests/acme_engine/: test_ecs_cluster_deployer.py  test_runtime_runner.py  test_stepfn_compile.py
tests/e2e/: test_ecs_cluster_and_taskdef_e2e.py  test_step_function_e2e.py
